welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:9: error: reassignment to val
	if (getCouleurSol = Color.green) {
                          ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
	if (getCouleurSol = Color.green) {
        ^